[package]
name = "axum_layers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" , features = ["tracing"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.5.1", features = ["util"] }
